# NRF_Pico_Arduino

Arduino/NRF_Receiver/: NRF_Receiver.ino
Pico/NRF_Receiver/: CMakeLists.txt
Pico/NRF_Receiver/inc/: HM11.H  NRF24.h
Pico/NRF_Receiver/src/: main.cpp
Pico/NRF_Transmitter/: CMakeLists.txt
Pico/NRF_Transmitter/src/: NRF24.cpp  main.cpp
